refactor: Refactor favorites API to support cursor-based pagination and additional filters
- Updated `FavoriteController` to accept cursor and size parameters for pagination.
- Modified `GetFavoritesResponse` to include openCount, hasNext, and nextCursor fields.
- Enhanced `FavoriteService` to handle cursor-based pagination and filtering by open status.
- Introduced `GetFavoritesRequest` DTO to encapsulate request parameters for favorites retrieval.
- Updated `FavoriteStoreDto` to include categoryId and distance fields.
- Adjusted tests in `FavoriteControllerRestDocsTest` and `FavoriteControllerTest` to validate new pagination and filtering features.
- Updated API specification documentation to reflect changes in query parameters and response structure.